--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "cdk-secrets",
   "version": "0.1.0",
+  "private": true,
   "bin": {
     "cdk-secrets": "bin/cdk-secrets.js"
   },
@@ -14,13 +15,17 @@
     "@aws-cdk/assert": "1.94.1",
     "@types/jest": "^26.0.10",
     "@types/node": "10.17.27",
+    "aws-cdk": "1.94.1",
     "jest": "^26.4.2",
     "ts-jest": "^26.2.0",
-    "aws-cdk": "1.94.1",
     "ts-node": "^9.0.0",
     "typescript": "~3.9.7"
   },
   "dependencies": {
+    "@aws-cdk/aws-codebuild": "^1.94.1",
+    "@aws-cdk/aws-iam": "^1.94.1",
+    "@aws-cdk/aws-lambda": "^1.94.1",
+    "@aws-cdk/aws-secretsmanager": "^1.94.1",
     "@aws-cdk/core": "1.94.1",
     "source-map-support": "^0.5.16"
   }
